# index_libs

./: CMakeLists.txt  README.md  args_module.ixx  boost_module.ixx  index_libs.cpp  index_libs.vcxproj  index_libs.vcxproj.filters  sqlite_orm_module.ixx  storage.cpp
db/: libraries.db
include/: storage.h
lib/: CMakeLists.txt  storage.cxx  utils.h
modules/: args_module.ixx  sqlite_orm_module.ixx  termcolor_module.ixx
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  bfd_test.cpp  bfd_test.cxx  bfd_wrapper.cxx  types.cxx
